--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+  <h1>Welcome to The Migrant Entrepeneur Network</h1>
+  <h3>Connecing. Educating. Developing.</h3>
+</div>
