Added font awesome gem and logo to navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
-  <h1>Welcome to The Migrant Entrepeneur Network</h1>
+  <h1>Welcome to The Migrant Entrepeneurs Network</h1>
   <h3>Connecing. Educating. Developing.</h3>
 </div>
