Added sign up links to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,29 @@
   <h1>Welcome to The Migrant Entrepeneurs Network</h1>
   <h3>Connecing. Educating. Developing.</h3>
 </div>
+
+<div class="row">
+  <div class="col-md-4">
+    <div class="well">
+      <h2 class="text-center">Entrepeneur Membership</h2>
+      <h4>Sign up for free and get basic access to the community.</h4>
+      <br/>
+      <%= link_to "Sign up as an Entrepeneur", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="well">
+      <h2 class="text-center">Corporate Membership</h2>
+      <h4>Sign up for the pro account for £10,000 and get access to the community and contact information!</h4>
+      <%= link_to "Sign up as a Corporate", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+    </div>
+  </div>
+    <div class="col-md-4">
+    <div class="well">
+      <h2 class="text-center">Academic/NGO Membership</h2>
+      <h4>Sign up for free and get basic access to the community.</h4>
+      <br/>
+      <%= link_to "Sign up as an Academic/NGO", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+    </div>
+  </div>
+</div>
