--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,26 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-6 col-md-offset-3">
+    <% if params[:plan] == '3' %>
+      <h1 class="text-center">Pro Account</h1>
+      <p class="text-center">Sign up for the pro account for £10,000 and get access to the community and contact information!</p>
+    <% elsif params[:plan] == '4' %>
+      <h1 class="text-center">Entrepreneur Account</h1>
+      <p class="text-center">Sign up for free and get basic access to the community.</p>
+      
+    <% else %>
+      <h1 class="text-center">Academnic/NGO Account</h1>
+      <p class="text-center">Sign up for free and get basic access to the community.</p>
+    <% end %>
+    
     <div class="well">
-    <h2>Sign up</h2>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
-        <div class="field form-group">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-        </div>
-        <div class="field form-group">
-          <%= f.label :password %>
-          <% if @validatable %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-        </div>
-        <div class="field form-group">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-        </div>
-        <div class="actions form-group">
-          <%= f.submit "Sign up", class: 'btn btn-success' %>
-        </div>
-      <% end %>
+      <h2>Sign up</h2>
+        <% if params[:plan] == '3' %>
+          <%= render "pro_form" %>
+        <% elsif params[:plan] == '4' %>
+          <%= render "ent_form" %>  
+        <% else %>
+          <%= render "academic_form" %>
+        <% end %>
       <%= render "devise/shared/links" %>
     </div>
   </div>
