--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,17 @@
-<%= @user %>
+<%= @user.profile.first_name %> <%= @user.profile.last_name %>
+
+<%= @user.profile.country_of_residence %><br/>
+<%= @user.profile.country_of_origin %><br/>
+<%= @user.profile.own_business %><br/>
+<%= @user.profile.starting_business %><br/>
+<%= @user.profile.business_nature %><br/>
+<%= @user.profile.services_interest_in %><br/>
+<%= @user.profile.promo_video %><br/>
+
+<% if current_user.plan_id == 3 %>
+  <%= @user.profile.phone_number %><br/>
+  <%= @user.profile.contact_email %><br/>
+<% end %>
+<%= @user.profile.other %><br/>
+
+
