--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,27 +6,52 @@
 </div>
 
 <div class="row">
-  <div class="col-md-4">
-    <div class="well">
-      <h2 class="text-center">Entrepeneur Membership</h2>
-      <h4>Sign up for free and get basic access to the community.</h4>
-      <br/>
-      <%= link_to "Sign up as an Entrepeneur", new_user_registration_path(plan: @ent_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+  <% if user_signed_in? %>
+  
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Your Profile</h2>
+        <% if current_user.profile %>
+          <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+          <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+        <% else %>
+          <p>Create your profile so that you can share your information with the community.</p>
+          <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block'%>
+        <% end %>
+      </div>
     </div>
-  </div>
-  <div class="col-md-4">
-    <div class="well">
-      <h2 class="text-center">Corporate Membership</h2>
-      <h4>Sign up for the pro account for £10,000 and get access to the community and contact information!</h4>
-      <%= link_to "Sign up as a Corporate", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">The Community</h2>
+        <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
+        <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
+      </div>
     </div>
-  </div>
+    
+  <% else %>  
+  
     <div class="col-md-4">
-    <div class="well">
-      <h2 class="text-center">Academic/NGO Membership</h2>
-      <h4>Sign up for free and get basic access to the community.</h4>
-      <br/>
-      <%= link_to "Sign up as an Academic/NGO", new_user_registration_path(plan: @academic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+      <div class="well">
+        <h2 class="text-center">Entrepeneur Membership</h2>
+        <h4>Sign up for free and get basic access to the community.</h4>
+        <br/>
+        <%= link_to "Sign up as an Entrepeneur", new_user_registration_path(plan: @ent_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
     </div>
-  </div>
+    <div class="col-md-4">
+      <div class="well">
+        <h2 class="text-center">Corporate Membership</h2>
+        <h4>Sign up for the pro account for £10,000 and get access to the community and contact information!</h4>
+        <%= link_to "Sign up as a Corporate", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+      </div>
+    </div>
+      <div class="col-md-4">
+      <div class="well">
+        <h2 class="text-center">Academic/NGO Membership</h2>
+        <h4>Sign up for free and get basic access to the community.</h4>
+        <br/>
+        <%= link_to "Sign up as an Academic/NGO", new_user_registration_path(plan: @academic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+  <% end %>
 </div>
