--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<%= @user.profile.first_name %> <%= @user.profile.last_name %>
+<%= image_tag @user.profile.avatar.url %><br/>
+<%= @user.profile.first_name %> <%= @user.profile.last_name %><br/>
 
 <%= @user.profile.country_of_residence %><br/>
 <%= @user.profile.country_of_origin %><br/>
