--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,30 @@
-<%= image_tag @user.profile.avatar.url %><br/>
-<%= @user.profile.first_name %> <%= @user.profile.last_name %><br/>
-
-<%= @user.profile.country_of_residence %><br/>
-<%= @user.profile.country_of_origin %><br/>
-<%= @user.profile.own_business %><br/>
-<%= @user.profile.starting_business %><br/>
-<%= @user.profile.business_nature %><br/>
-<%= @user.profile.services_interest_in %><br/>
-<%= @user.profile.promo_video %><br/>
-
-<% if current_user.plan_id == 3 %>
-  <%= @user.profile.phone_number %><br/>
-  <%= @user.profile.contact_email %><br/>
-<% end %>
-<%= @user.profile.other %><br/>
-
-
+<div class="row">
+  <div class="col-md-3 text-center">
+    <%= image_tag @user.profile.avatar.url %>
+  </div>
+  
+  <div class="col-md-9">
+    <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
+    
+    <div class="well profile-block profile-description">
+      <h3>Description</h3>
+      <%= @user.profile.country_of_residence %><br/>
+      <%= @user.profile.country_of_origin %><br/>
+      <%= @user.profile.own_business %><br/>
+      <%= @user.profile.starting_business %><br/>
+      <%= @user.profile.business_nature %><br/>
+      <%= @user.profile.promo_video %><br/>
+      <%= @user.profile.other %><br/>
+      <h3><span class="services_interest_in_icon" ><%= services_interest_in_icon %></span><%= @user.profile.services_interest_in %><br/></h3>
+    </div>
+    
+    <% if true#current_user.plan_id == 3 %>
+      <div class="well profile-block contact-info">
+        <h3>Contact Info</h3>
+        <%= @user.profile.phone_number %><br/>
+        <%= @user.profile.contact_email %><br/>
+      </div>
+    <% end %>
+    
+  </div>
+</div>
