--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,3 @@
-<%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
-
 <div class="jumbotron text-center">
   <h1>Welcome to The Migrant Entrepeneurs Network</h1>
   <h3>Connecing. Educating. Developing.</h3>
@@ -24,7 +22,7 @@
       <div class="well">
         <h2 class="text-center">The Community</h2>
         <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
-        <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
+        <%= link_to "Visit the community", users_path, class: 'btn btn-default btn-lg btn-block' %>
       </div>
     </div>
     
