--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3 text-center">
-    <%= image_tag @user.profile.avatar.url %>
+    <%= image_tag @user.profile.avatar.url, class: 'user-show-avatar' %>
   </div>
   
   <div class="col-md-9">
@@ -18,7 +18,7 @@
       <h3><span class="services_interest_in_icon" ><%= services_interest_in_icon %></span><%= @user.profile.services_interest_in %><br/></h3>
     </div>
     
-    <% if true#current_user.plan_id == 3 %>
+    <% if current_user.plan_id == 3 %>
       <div class="well profile-block contact-info">
         <h3>Contact Info</h3>
         <%= @user.profile.phone_number %><br/>
