--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <h1>Welcome to The Migrant Entrepeneurs Network</h1>
-  <h3>Connecing. Educating. Developing.</h3>
+  <h3>Connecting. Educating. Developing.</h3>
 </div>
 
 <div class="row">
