--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,12 @@
               <%= link_to user do %>
                 <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
               <% end %>
-              <p><%= user.profile.services_interest_in %></p>
+                <p>
+                  <%= user.profile.services_interest_in %>
+                  <% if user.plan_id == 3 %>
+                    <span class="label label-danger">PRO</span>
+                  <% end %>
+                </p>
             </div>
           </div>
         </li>
