Added helpful copy

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,52 @@
-<h2>About</h2>
+<div class="container">
+    <div class="row">
+        <h2>About Us</h2>
+    </div>
+
+    <div class="row">
+        <h3>Our Mission</h3>
+        <p>To connect migrant entrepreneurs and promote their role in global economic and social development.</p>
+    </div>
+    
+    <div class="row">
+    <h3>Our Beliefs</h3>
+    <p>We believe that migrant entrepreneurs play a positive role in the economic and social development of the country they live in.</p>
+    <p>We believe that the migrant population have strong entrepreneurial skills and can adapt to any economic environment.</p>
+    <p>We believe that the success of migrant entrepreneurs is due to their diverse networks, social resilience, economic resourcefulness and business creativity.</p>
+    </div>
+    
+    <div class="row">
+    <h3>Our Objectives</h3>
+    <p><ol>
+    <li>To recognize the positive contribution of migrant entrepreneurs globally.</li>
+    <li>To empower marginalised migrant communities through entrepreneurship.</li>
+    <li>To promote sustainable and responsible practices by migrant entrepreneurs.</li>
+    </ol></p>
+    </div>
+    
+    <div class="row">
+    <h3>Our Methods</h3>
+    <p>We have three methods to achieve our objectives:</p>
+    
+    <p><em>Connecting:</em> we connect migrant entrepreneurs through a network where they can share their experiences and challenges and feature their products and services.</p>
+    <p><em>Educating:</em> we promote migrant entrepreneurs and provide them with the necessary knowledge and skills needed for growing startups into successful businesses.</p>
+    <p><em>Developing:</em> we provide migrant entrepreneurs with access to professional mentoring and partnership opportunities with successful business leaders and coaches.</p>
+    </div>
+    
+    <div class="row">
+    <h3>Our 2020 Challenge</h3>
+    <p>By the end of 2014, global forced displacement reached 50 million - the highest level ever recorded by UNHCR. Conflict, global inequalities and environmental changes are forcing people to migrate in search of better lives and economic opportunities. However, these migrants are often marginalized, exploited and excluded from socio-economic opportunities in the countries they travel to.
+    Paradoxically, the research shows that migrants are more likely to start a business and create job opportunities thus adding to the host country’s economic growth. Our challenge is to connect migrant entrepreneurs globally and to tackle the legal, cultural and political obstacles they face. By 2020 we aim to connect 2,020 migrant entrepreneurs around the world through our enabling platform.</p>
+    </div>
+    
+    <div class="row">
+    <h3>How Are We Going To Do It?</h3>
+    <p><ul>
+        <li>We will encourage migrant entrepreneurs to self-organise into national and city-based hubs, to support each other and communicate with the global Network.</li>
+        <li>We will ask each migrant entrepreneur in the Network to share their story in a short video clip, including their three best entrepreneurial tips.</li>
+        <li>We will develop and deliver social enterprise training for members around the world, as well as offer train-the-trainer courses for local entrepreneurs.</li>
+        <li>We will establish a network of responsible corporations committed to supporting and collaborating with migrant entrepreneurs globally.</li>
+        <li>We will encourage migrant entrepreneurs hubs to hold annual national and regional meetings and conferences.</li>
+    </ul></p>
+    </div>
+</div>
