--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,1 +1,69 @@
-<h2>Team</h2>
+<div class="container">
+    <div class="row">
+        <h2>Team</h2>
+    </div>
+
+    <div class="row">
+      
+        <div class="col-md-3">
+            <!--Indira photo-->
+        </div>
+        
+        <div class="col-md-9">
+            <h3>Indira Kartallozi</h3>
+            <p>Indira Kartallozi is the founder and director of Chrysalis Family Futures – a social enterprise that stands for protection and empowering of human and socio-economic rights of vulnerable and marginalised families and children. She is also the founder of the Migrant Entrepreneurs Network.</p>
+            <p>Her work with Chrysalis Family Futures has taken her to various countries in Africa, Asia, Europe and Latin America. In the UK, she works as a Legal Advisor for Freedom From Torture, a Senior Case Worker for Baobab Centre for Young Survivors in Exile, and a Welfare Rights and Housing Advisor at Haringey Migrant Support Centre.</p>
+            <p>In 2015, Indira was a top 5 finalist in the Migrant Woman of the Year. She is also on the Advisory Board of the Social Enterprise Reporting Awards, an initiative of CSR Nigeria.</p>
+            <p>Indira has 15-year experience in advice on welfare, housing and immigration rights and her expertise ranges on issues of forced migration and human rights, social entrepreneurship and gender equality.</p>
+            <p>Since completing her MA in Refugee Studies and her ground breaking research on austerity and welfare reforms Indira has been invited to speak to various conferences and seminars around the world. </p>
+        </div>
+    </div>
+
+    <div class="row">
+      
+        <div class="col-md-3">
+            <!--wayne photo-->
+        </div>
+        
+        <div class="col-md-9">
+            <h3>Wayne Visser</h3>
+            <p>Dr Wayne Visser is Director of the think tank Kaleidoscope Futures and Founder of CSR International. In addition, Wayne is Senior Associate at the University of Cambridge Programme for Sustainability Leadership, Visiting Professor of Corporate Responsibility at the Gordon Institute of Business Science in South Africa and Adjunct Professor of Sustainable Development at Deakin Business School in Australia.</p>
+
+            <p>Previously, Wayne was Director of Sustainability Services for KPMG and Strategy Analyst for Cap Gemini in South Africa. Wayne is the author of nineteen books, including CSR 2.0 (2013), The Quest for Sustainable Business (2012), The Age of Responsibility (2011), The World Guide to CSR (2010) and The A to Z of Corporate Social Responsibility (2010).</p>
+            
+            <p>He is a guest columnist for The Guardian newspaper and has also published over 300 other works (chapters, articles, etc.). He has delivered more than 250 professional speeches all around the world, with his work taking him to 68 countries in the last 20 years.</p>
+            
+            <p>Wayne has been listed as one of the Top 100 Thought Leaders in Trustworthy Business Behavior (2013), Top 100 Global Sustain Ability Leaders (2012 & 2011), the Top 100 Thought Leaders in Europe & the Middle East (2011), the Top 100 CSR Leaders and the Top 20 Sustainability Leaders (2012 & 2009). He is also the recipient of the Global CSR Excellence & Leadership Award (2013), the Emerald Literati Outstanding Author Contribution Award (2011) and the Outstanding Teacher Award of the Warwick MBA (2010/11 & 2011/12).</p>
+            
+        </div>
+    </div>
+    
+    <div class="row">
+      
+        <div class="col-md-3">
+            <!--Louise Photo-->
+        </div>
+        
+        <div class="col-md-9">
+            <h3>Louise Thomson</h3>
+            <p>Louise works with entrepreneurs and social entrepreneurs to close the gap between the for-profit and non-profit sectors. She recently helped to develop a new social startup training programme in Brazil by delivering workshops and consultancy sessions to social entrepreneurs in Rio de Janeiro. She is currently managing the launch and day-to-day operations of a new online accelerator programme for digital entrepreneurs. Louise began her career as a business intelligence analyst investigating corporate fraud and corruption in Europe, the CIS and Latin America. She has a first-class degree in Modern Languages (Russian and Portuguese) from the University of Cambridge</p>
+        </div>
+    </div>
+    
+    <div class="row">
+      
+        <div class="col-md-3">
+            <!--Yulina photo-->
+        </div>
+        
+        <div class="col-md-9">
+            <h3>Yuliana Topazly</h3>
+            <p>Yuliana is a SFEDI-qualified Social Enterprise Trainer and Enterprise Mentor and is currently doing her PhD in the University of West London on Graduate entrepreneurship.</p>
+            
+            <p>Yuliana is a co-founder and co-director of the award-winning and quality-accredited social franchise, My OutSpace Business Centre (www.myoutspace.co.uk), which specialises in supporting women into employment and self-employment. She has supported  over 200 businesses in the last 3 years, most of which are run by women-migrants.</p>
+
+            <p>Yuliana has been named a Purley Local StartUp Britain Champion; won several business awards, including Croydon Business Awards in 2013, Best Social Enterprise, Business Advisor Award and been in the final for the Migrant Woman of the Year Award. Yuliana understands challenges small businesses face especially those run by women-migrants and those with children. She is very passionate about creating awareness about how much migrants contribute to the economy and rights for parents'</p>
+        </div>
+    </div>
+
+</div>
