--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,3 +1,7 @@
+<h1>Migrant Entrepeneur Network</h1>
+<p>Welcome to Migrant Entrepreneurs Network. This membership is free and will give you access to all our services. To complete the membership process please provides the following information. The information provided will be reviewed by a member of our team. If we require further information we will contact you via email.</p>
+
+
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <h1 class="text-center">Create Your Profile</h1>
