--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,6 @@
+<h1 class="text-center">Contact Us</h1>
+<p class="text-center">Reach out if you have any questions or comments.</p>
+
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <div class="well">
