--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,6 @@
+<h1>Migrant Entrepeneur Network</h1>
+<p>Welcome to the Migrant Entrepeneur Network. Users must fill out a profile in order to be visible in the community.</p>
+
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <ul class="list-unstyled">
