updated team page

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -5,11 +5,11 @@
 
     <div class="row">
       
-        <div class="col-md-3">
-            <!--Indira photo-->
+        <div class="col-md-4">
+            <%=image_tag("Indira.png", alt: "Indira Photo", class: "profilePic")%>
         </div>
         
-        <div class="col-md-9">
+        <div class="col-md-8">
             <h3>Indira Kartallozi</h3>
             <p>Indira Kartallozi is the founder and director of Chrysalis Family Futures – a social enterprise that stands for protection and empowering of human and socio-economic rights of vulnerable and marginalised families and children. She is also the founder of the Migrant Entrepreneurs Network.</p>
             <p>Her work with Chrysalis Family Futures has taken her to various countries in Africa, Asia, Europe and Latin America. In the UK, she works as a Legal Advisor for Freedom From Torture, a Senior Case Worker for Baobab Centre for Young Survivors in Exile, and a Welfare Rights and Housing Advisor at Haringey Migrant Support Centre.</p>
@@ -21,11 +21,11 @@
 
     <div class="row">
       
-        <div class="col-md-3">
-            <!--wayne photo-->
+        <div class="col-md-4">
+            <%=image_tag("wayne.jpg", alt: "Wayne Photo", class: "profilePic")%>
         </div>
         
-        <div class="col-md-9">
+        <div class="col-md-8">
             <h3>Wayne Visser</h3>
             <p>Dr Wayne Visser is Director of the think tank Kaleidoscope Futures and Founder of CSR International. In addition, Wayne is Senior Associate at the University of Cambridge Programme for Sustainability Leadership, Visiting Professor of Corporate Responsibility at the Gordon Institute of Business Science in South Africa and Adjunct Professor of Sustainable Development at Deakin Business School in Australia.</p>
 
@@ -40,11 +40,11 @@
     
     <div class="row">
       
-        <div class="col-md-3">
-            <!--Louise Photo-->
+        <div class="col-md-4">
+            <%=image_tag("user-photo.png", alt: "Louise Photo", class: "profilePic")%>
         </div>
         
-        <div class="col-md-9">
+        <div class="col-md-8">
             <h3>Louise Thomson</h3>
             <p>Louise works with entrepreneurs and social entrepreneurs to close the gap between the for-profit and non-profit sectors. She recently helped to develop a new social startup training programme in Brazil by delivering workshops and consultancy sessions to social entrepreneurs in Rio de Janeiro. She is currently managing the launch and day-to-day operations of a new online accelerator programme for digital entrepreneurs. Louise began her career as a business intelligence analyst investigating corporate fraud and corruption in Europe, the CIS and Latin America. She has a first-class degree in Modern Languages (Russian and Portuguese) from the University of Cambridge</p>
         </div>
@@ -52,11 +52,11 @@
     
     <div class="row">
       
-        <div class="col-md-3">
-            <!--Yulina photo-->
+        <div class="col-md-4">
+            <%=image_tag("yelena.jpg", alt: "Yelena Photo", class: "profilePic")%>
         </div>
         
-        <div class="col-md-9">
+        <div class="col-md-8">
             <h3>Yuliana Topazly</h3>
             <p>Yuliana is a SFEDI-qualified Social Enterprise Trainer and Enterprise Mentor and is currently doing her PhD in the University of West London on Graduate entrepreneurship.</p>
             
