--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="row">
-        <h2>About Us</h2>
+    <div class="row text-center">
+        <p class="logo"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo")%></p>
     </div>
 
     <div class="row">
