--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,23 +56,23 @@
     <div class="row options">
       <% if user_signed_in? %>
       
-        <div class="col-md-6">
-          <div class="well">
+        <div class="col-md-4 col-md-offset-2">
+          <div class="well-clear">
             <h2 class="text-center">Your Profile</h2>
             <% if current_user.profile %>
-              <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
-              <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+              <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: 'btn btn-primary btn-lg btn-block' %>
+              <%= link_to "View your profile", user_path(current_user), class: 'btn btn-primary btn-lg btn-block' %>
             <% else %>
               <p>Create your profile so that you can share your information with the community.</p>
-              <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block'%>
+              <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-primary btn-lg btn-block'%>
             <% end %>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="well">
+        <div class="col-md-4">
+          <div class="well-clear">
             <h2 class="text-center">The Community</h2>
             <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
-            <%= link_to "Visit the community", users_path, class: 'btn btn-default btn-lg btn-block' %>
+            <%= link_to "Visit the community", users_path, class: 'btn btn-primary btn-lg btn-block' %>
           </div>
         </div>
         
