--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -8,7 +8,7 @@
           <%= f.text_field :last_name, class: 'form-control' %>
         </div>
         <div class="form-group">
-            <%= f.label :avatar %>
+            <%= f.label "Photo" %>
             <%= f.file_field :avatar, class: 'form-control' %>
         </div>
         <div class="form-group">
@@ -20,27 +20,27 @@
           <%= f.text_field :country_of_origin, class: 'form-control' %>
         </div>
         <div class="check-box">
-          <%= f.label :own_business %>
+          <%= f.label "Do you own a business?" %>
           <%= f.select :own_business, ['Yes', 'No'], {}, class: 'form-control' %>
         </div>
         <div class="check-box">
-          <%= f.label :starting_business %>
+          <%= f.label "Are you starting a business?" %>
           <%= f.select :starting_business, ['Yes', 'No'], {}, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :business_nature %>
+          <%= f.label "What is the nature of your business(es)?" %>
           <%= f.text_area :business_nature, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :services_interest_in %>
+          <%= f.label "What services are you interested in?" %>
           <%= f.select :services_interest_in, ['Mentorship', 'Mentee', 'Training', 'Partnership'], {}, class: 'form-control' %>
         </div>
         <div class="check-box">
-          <%= f.label :promo_video %>
+          <%= f.label "Do you have a promotional video?" %>
           <%= f.select :promo_video, ['Yes', 'No'], {}, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :other %>
+          <%= f.label "Any other comments?" %>
           <%= f.text_area :other, class: 'form-control' %>
         </div>
         <div class="form-group">
