changed production.rb file & css to ammodate heroku requirements

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -49,7 +49,7 @@ a {
 // HomePage styles
 
 #frontPage1 {
-    background-image: url("home3.jpg");
+    background-image: image-url("home3.jpg");
     height: 700px;
     width: 100%;
 }
@@ -91,7 +91,7 @@ a {
 }
 
 #frontpage4 {
-    background-image: url("home.jpg");
+    background-image: image-url("home.jpg");
     height: 1000px;
     width: 1140px;
 }
