--- a/app/views/devise/registrations/_academic_form.html.erb
+++ b/app/views/devise/registrations/_academic_form.html.erb
@@ -9,7 +9,7 @@
   </div>
   
   <div class="field form-group">
-    <%= f.label :password %>
+    <%= f.label "Password - minimum 8 characters" %>
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
