--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div class="row" >
       <div class="col-md-12">
         <p class="text-center"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo") %></p>
-        <h1 class="text-center">Welcome to The Migrant Entrepeneurs Network</h1>
+        <h1 class="text-center">Welcome to The Migrant Entrepreneurs Network</h1>
         <h3 class="text-center">Connecting. Educating. Developing.</h3>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="col-md-4">
           <div class="well-clear">
             <h2 class="text-center">The Community</h2>
-            <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
+            <p>Visit the community to meet other entrepreneurs, corporates, NGOs, and academics!</p>
             <%= link_to "Visit the community", users_path, class: 'btn btn-primary btn-lg btn-block' %>
           </div>
         </div>
@@ -80,7 +80,7 @@
       
         <div class="col-md-4">
           <div class="well-clear">
-            <h2 class="text-center">Entrepeneur Membership</h2>
+            <h2 class="text-center">Entrepreneur Membership</h2>
             <p class="text-center"><em>Free</em></p>
             <h4><ul>
               <li>Access Learning Programmes</li>
@@ -89,7 +89,7 @@
             </ul></h4>
             <br/>
             <br/>
-            <%= link_to "Sign up as an Entrepeneur", new_user_registration_path(plan: @ent_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+            <%= link_to "Sign up as an Entrepreneur", new_user_registration_path(plan: @ent_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
           </div>
         </div>
         <div class="col-md-4">
