added a few more styles

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -27,7 +27,7 @@ a {
 }
 
 .btn-clear {
-    border: 2px solid #f7941d;
+    border: 2px solid #f8f8f8;
 }
 
 .btn-primary {
@@ -87,7 +87,11 @@ a {
 
 #frontPage3 h3 {
     padding: 0px 50px 0px 50px;
-    color: #F7941D;
+    color: #f8f8f8;
+}
+
+#frontPage3 a {
+    color: #f8f8f8;
 }
 
 #frontpage4 {
