--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
                 <p>
                   <%= user.profile.services_interest_in %>
                   <% if user.plan_id == 3 %>
-                    <span class="label label-danger">PRO</span>
+                    <span class="label label-danger">Corporate</span>
                   <% end %>
                 </p>
             </div>
