--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
         
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Team", team_path %></li>
+            <li><%= link_to "Projects", projects_path %></li>
             <li><%= link_to "Contact Us", new_contact_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
