--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -65,5 +65,20 @@
             <p>Yuliana has been named a Purley Local StartUp Britain Champion; won several business awards, including Croydon Business Awards in 2013, Best Social Enterprise, Business Advisor Award and been in the final for the Migrant Woman of the Year Award. Yuliana understands challenges small businesses face especially those run by women-migrants and those with children. She is very passionate about creating awareness about how much migrants contribute to the economy and rights for parents'</p>
         </div>
     </div>
+    
+    <div class="row">
+      
+        <div class="col-md-4">
+            <%=image_tag("Nyasha2.jpg", alt: "Nyasha Photo", class: "profilePic")%>
+        </div>
+        
+        <div class="col-md-8">
+            <h3>Nyasha Gwatidzo</h3>
+            <p>Nyasha was born in Zimbabwe and gained a degree in Chemistry from London University. She then went on to retrain at Reading University and gained an MA, to work with adults and children with emotional issues. She is a qualified psychotherapist, social worker, coach and mentor.</p>
+            <p>She is a social entrepreneur, working with disadvantaged people in the UK and Africa. She runs a multimillion pound social enterprise Banya, which finds foster families for children in the care of local authorities. She founded a charity in the UK, Vana Trust which raises funds for children affected by HIV and AIDS in Zimbabwe, supporting their education. The Trust also supports adults and young people here in the UK who have learning and emotional difficulties, through her organic farm in Buckinghamshire.</p>
+            <p>Her vision for the future is to forge global connections with women in the developing world who inspire her everyday. She would like them to reach economic independence through enterprise. With this in mind she has set up World Impact Capital, a social impact investment  £100 million fund to support women entrepreneurs and she currently mentors people starting up in business.</p>
+            <p>Nyasha has won a variety of business awards. She has recently published her first book, Walk with me through sixteen inspirational business and life tips. She lives in Buckinghamshire with her husband and has three adult children.</p>
+        </div>
+    </div>
 
 </div>
