--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -100,6 +100,17 @@ a {
     width: 1140px;
 }
 
+.learn {
+    font-style: italic;
+    font-size: 12px;
+    list-style-type: none;
+    padding: 40px 0 0 0;
+}
+
+.learn a {
+    color: #000000;
+}
+
 .options {
     padding: 75px 0 0 0;
 }
