--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
 <h1 class="text-center">Contact Us</h1>
-<p class="text-center">Reach out if you have any questions or comments.</p>
+<p class="text-center">Get in touch if you'd like to join us or have any questions or comments.</p>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
