--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -86,8 +86,9 @@
               <li>Access Learning Programmes</li>
               <li>Peer-to-peer Mentoring Scheme</li>
               <li>Migrant Entrepreneurs Hub</li>
+              <br/>
+              <li class="learn"><%= link_to "Click here to learn more membership options", membership_path %></li>
             </ul></h4>
-            <br/>
             <br/>
             <%= link_to "Sign up as an Entrepreneur", new_user_registration_path(plan: @ent_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
           </div>
@@ -99,9 +100,10 @@
             <h4><ul>
               <li>Connect, Coach, Partner, Collaborate with entrepreneurs</li>
               <li>Engage personally or through your CSR programmes</li>
+              <li class="learn"><%= link_to "Click here to learn more membership options", membership_path %></li>
             </ul></h4>
             <br/>
-            <%= link_to "Sign up as a Corporate", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+            <%= link_to "Sign up as a Corporate", new_contact_path, class: 'btn btn-success btn-lg btn-block' %>
           </div>
         </div>
           <div class="col-md-4">
@@ -111,6 +113,7 @@
             <h4><ul>
               <li>Offer talks, training courses, venues and other support</li>
               <li>Develop case studies and media features</li>
+              <li class="learn"><%= link_to "Click here to learn more membership options", membership_path %></li>
             </ul></h4>
             <br/>
             <%= link_to "Sign up as an Academic/NGO", new_user_registration_path(plan: @academic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
