fixed typo in profile display form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
         <%= @user.profile.country_of_origin %>
       <h5>Business Owner?</h5>
         <%= @user.profile.own_business %>
-      <h5>Starting a Busines?</h5>
+      <h5>Starting a Business?</h5>
         <%= @user.profile.starting_business %>
           
       <h5>Nature of the Business(es)</h5>
