--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row text-center">
-        <p class="logo"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo")%></p>
+        <p class="logo"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo", class: "img-responsive center-block")%></p>
     </div>
 
     <div class="row">
