--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,9 @@
     
     <div class="row" >
       <div class="col-md-12">
-        <p class="text-center"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo") %></p>
+        <p class="text-center"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo", class: "img-responsive center-block") %></p>
+      </div>
+      <div class="col-md-12">
         <h1 class="text-center">Welcome to The Migrant Entrepreneurs Network</h1>
         <h3 class="text-center">Connecting. Educating. Developing.</h3>
       </div>
