--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -45,7 +45,7 @@
       
     </div>
   </div>
-
+  
   <div id="frontPage3">
     <div class="row">
       <h3 class="text-center">By 2020 we aim to connect 2,020 migrant entrepreneurs around the world through our enabling platform.</h3>
@@ -56,7 +56,7 @@
   </div>
 
 
-  <div id="frontpage4">  
+  <div id="frontpage4">
     
     <% if user_signed_in? %>
       
@@ -88,14 +88,13 @@
       
       <div class="row options">
         <div class="col-md-4">
-          <div class="well-clear">
+          <div class="well-clear fill">
             <h2 class="text-center">Entrepreneur Membership</h2>
             <p class="text-center"><em>Free</em></p>
             <h4><ul>
               <li>Access Learning Programmes</li>
               <li>Peer-to-peer Mentoring Scheme</li>
               <li>Migrant Entrepreneurs Hub</li>
-              <br/>
               <li class="learn"><%= link_to "Click here to learn more membership options", membership_path %></li>
             </ul></h4>
             <br/>
@@ -104,7 +103,7 @@
         </div>
         
         <div class="col-md-4">
-          <div class="well-clear">
+          <div class="well-clear fill">
             <h2 class="text-center">Corporate Membership</h2>
             <p class="text-center"><em>£10,000</em></p>
             <h4><ul>
@@ -118,7 +117,7 @@
         </div>
         
         <div class="col-md-4">
-          <div class="well-clear">
+          <div class="well-clear fill">
             <h2 class="text-center">Academic/NGO Membership</h2>
             <p class="text-center"><em>Free</em></p>
             <h4><ul>
