Style the approval form

--- a/app/views/user_approvals/index.html.erb
+++ b/app/views/user_approvals/index.html.erb
@@ -1,14 +1,16 @@
 <h1>New users for approval</h1>
 <%= will_paginate @unapproved_users %>
-<table>
-  <tr>
-    <th>Email</th>
-    <th></th>
-  </tr>
-  <% @unapproved_users.each do |user| %>
+<table class="pure-table pure-table-bordered">
+  <thead>
     <tr>
+      <th>Email</th>
+      <th>Approve?</th>
+    </tr>
+  </thead>
+  <% @unapproved_users.each_with_index do |user, idx| %>
+    <tr class="<%= 'pure-table-odd' if idx.odd? %>">
       <td><%= user.email %></td>
-      <td><%= link_to 'Approve', user_approvals_path(id: user.id), method: :post %>
+      <td><%= link_to 'Yes', user_approvals_path(id: user.id), method: :post %>
     </tr>
   <% end %>
 </table>
