--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,12 +11,11 @@
       <h5>Country of Residence</h5>
         <%= @user.profile.country_of_residence %>
       <h5>Country of Origin</h5>
-        <%= @user.profile.country_of_origin %>
       <h5>Business Owner?</h5>
+      <%= @user.profile.country_of_origin %>
         <%= human_bool(@user.profile.own_business) %>
-      <h5>Starting a Busines?</h5>
+      <h5>Starting a Business?</h5>
         <%= human_bool(@user.profile.starting_business) %>
-
       <h5>Nature of the Business(es)</h5>
         <%= @user.profile.business_nature %>
       <h5>Promotional Video Available</h5>
