updated membership options page

--- a/app/views/pages/membership.html.erb
+++ b/app/views/pages/membership.html.erb
@@ -11,6 +11,9 @@
             <h4><ul>
               <li>Become a free member of the Migrant Entrepreneurs Network and share your story, entrepreneurial tips and products and services with your peers around the world.</li>
               <li>Sign up for one of the learning programs offered by the Network, to keep up with global trends and best practices and to enhance your business skills.</li>
+              <li>Access educational materials and training courses on business skills, entrepreneurship, leadership, social enterprise and sustainable development.
+              <li>Facilitated access to corporate members as potential consumers of migrant entrepreneurs’ products and services.</li>
+              
               <li>Get involved in our peer-to-peer migrant entrepreneurs mentoring scheme and our business coaching programme.</li>
               <li>Become active in establishing or supporting a national or city Migrant Entrepreneurs Hub.</li>
             </ul></h4>
@@ -24,6 +27,11 @@
             <h2 class="text-center">Corporate Membership</h2>
             <p class="text-center"><em>£10,000</em></p>
             <h4><ul>
+              <li>An opportunity to support a high impact social responsibility project in the countries in which they operate.</li>
+              <li>A partner for corporate employee volunteer programs, by engaging in the migrant entrepreneurs mentorship scheme.</li>
+              <li>Facilitated access to the products and services of migrant entrepreneurs, thereby supporting local economic empowerment.</li>
+              <li>Access to a half-day workshop on the challenge of forced migration and the opportunities of migrant entrepreneurship.</li>
+              <li>Access to networks of professionals from the refugee community, as a potential source of recruitment.</li>
               <li>Become an individual or corporate member of the Migrant Entrepreneurs Network, to connect with migrant entrepreneurs of the country of your choice.</li>
               <li>Volunteer to be a business leadership coach to one or more migrant entrepreneurs in the country or sector of your choice.</li>
               <li>Support the Migrant Entrepreneurs Network financially and in-kind through your corporate social responsibility programme.</li>
@@ -41,6 +49,7 @@
             <h2 class="text-center">Academic/NGO Membership</h2>
             <p class="text-center"><em>Free</em></p>
             <h4><ul>
+              <li>Access to a network of migrant entrepreneurs with which to conduct research projects.</li>
               <li>Offer pro-bono talks, training courses, venues and other support for the Migrant Entrepreneurs Network, globally or through the national and city Hubs.</li>
               <li>Develop case studies and media features that profile the inspiring stories migrant entrepreneurs in the Network and the challenges they face</li>
             </ul></h4>
